kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastfood-orderservice
  labels:
    name: fastfood-orderservice
